@@ -1,3 +1,6 @@
+Unreleased
+- Windows: Search for Easy Mode presets in a default user directory similar to macOS and Linux
+
 v3.2.1 (2023-02-26)
 - Fix minor bug with Easy Mode statistics output
 - Port to new FFmpeg channel layout API
